Streamline top-level nav: reduce to four tabs (Start Here, Screen Time, Online Safety, Mindful Breaks); remove Survey & Resources nav items; rename CTA to 'Crisis & Local Help'.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,12 +50,12 @@ import "../styles/global.css";
                         tabindex="0"
                         class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
                     >
-                        <li><a href="/quick-start/">Quick Start</a></li>
+                        <li><a href="/quick-start/">Start Here</a></li>
                         <li><a href="/screen-time/">Screen Time</a></li>
                         <li><a href="/online-safety/">Online Safety</a></li>
                         <li><a href="/mindful-breaks/">Mindful Breaks</a></li>
-                        <li><a href="/survey/">Survey</a></li>
-                        <li><a href="/resources/">Resources</a></li>
+
+
                     </ul>
                 </div>
                 <a href="/" class="btn btn-ghost text-xl font-bold text-primary"
@@ -66,7 +66,7 @@ import "../styles/global.css";
                 <ul class="menu menu-horizontal px-1">
                     <li>
                         <a href="/quick-start/" class="hover:text-primary"
-                            >Quick Start</a
+                            >Start Here</a
                         >
                     </li>
                     <li>
@@ -84,19 +84,13 @@ import "../styles/global.css";
                             >Mindful Breaks</a
                         >
                     </li>
-                    <li>
-                        <a href="/survey/" class="hover:text-primary">Survey</a>
-                    </li>
-                    <li>
-                        <a href="/resources/" class="hover:text-primary"
-                            >Resources</a
-                        >
-                    </li>
+
+
                 </ul>
             </div>
             <div class="navbar-end">
                 <a href="/get-help/" class="btn btn-accent btn-sm"
-                    >Get Help Now</a
+                    >Crisis & Local Help</a
                 >
             </div>
         </nav>
