Add Parent Survey link to main navigation

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,6 +54,7 @@ import "../styles/global.css";
                         <li><a href="/screen-time/">Screen Time</a></li>
                         <li><a href="/online-safety/">Online Safety</a></li>
                         <li><a href="/mindful-breaks/">Mindful Breaks</a></li>
+                        <li><a href="/survey/">Parent Survey</a></li>
 
 
                     </ul>
@@ -82,6 +83,11 @@ import "../styles/global.css";
                     <li>
                         <a href="/mindful-breaks/" class="hover:text-primary"
                             >Mindful Breaks</a
+                        >
+                    </li>
+                    <li>
+                        <a href="/survey/" class="hover:text-primary"
+                            >Parent Survey</a
                         >
                     </li>
 
